// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary component correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $5.00
  </h1>
</div>
`;

exports[`Should render ExpensesSummary with expenses data 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $5,000.00
  </h1>
</div>
`;
